  =auctex-13= branch for archiving purposes but it won't get any updates
  anymore.

  For users who tracked the master branch: Do =git switch main= to
  switch to the main branch where development takes place nowadays.

- Move additions to the variable ~LaTeX-indent-environment-list~ for
  various tabular environments to =latex.el= from the respective style
  files.

** Removed

- Remove the possibility to disable the side-wide installation with:
  #+begin_src emacs-lisp
    (unload-feature 'tex-site)
  #+end_src
  Using this form when installed from [[ELPA:auctex.html][ELPA]] will
  throw an error.

* [14.0.6] - 2024-06-30

** Added

- Complete support for in-buffer completion of color support macros.
- Add new support files =style/contract.el=, =style/diagbox.el= and
  =style/standalone.el=.

** Fixed

- Add appropriate ~delete-selection~ properties for
  ~LaTeX-insert-left-brace~, ~TeX-insert-dollar~ and
  ~TeX-insert-backslash~ that differentiate between the "electric" and
  "just-insert-the-symbol" behavior.  That should simplify cooperation
  with other electric modes.

  As a result of this adjustment, the behavior of ~TeX-insert-dollar~
  is affected in some ways:
  - With raw prefix argument =C-u=, =$= (~TeX-insert-dollar~) now
    inserts four dollars as opposed to one.  This behavior is in-line
    with other symbols, in particular ="= (~TeX-insert-quote~) and =\=
    (~TeX-insert-backslash~).  If you need one literal =$=, you can type
    =C-1 $= or =C-q $=.
  - We no longer have explicit support of the special behavior that if
    ~TeX-electric-math~ is non-~nil~ and point is inside math mode right
    between a couple of single dollars, pressing =$= will insert another
    pair of dollar signs and leave the point between them.

    It still works as before if ~TeX-electric-math~ is pair of dollars
    while it inserts =\(= and =\)= when ~TeX-electric-math~ is
    =("\(" . "\)")=.
  - When ~TeX-electric-math~ is a pair of dollars and the point is in